Update notebooks with colab badge

--- a/notebooks/01_getting_started.ipynb
+++ b/notebooks/01_getting_started.ipynb
@@ -8,6 +8,8 @@
       "source": [
         "# Getting Started with NLP\n",
         "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/raghavbali/workshop_text_classification/blob/main/notebooks/01_getting_started.ipynb)\n",
+        "\n",
         "In this notebook, we will get familiar with the world on NLP. \n",
         "Key takeaways from this notebook are:\n",
         "\n",
