--- a/notebooks/02_text_representation.ipynb
+++ b/notebooks/02_text_representation.ipynb
@@ -1,25 +1,14 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "02_text_representation.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5qqNXxRKU1B8"
+      },
       "source": [
         "# Text Representation Techniques\n",
+        "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/raghavbali/workshop_text_classification/blob/main/notebooks/02_text_representation.ipynb)\n",
         "\n",
         "In this notebook, we will get familiar with some basic Text Representation Techniques \n",
         "Key takeaways from this notebook are:\n",
@@ -32,10 +21,7 @@
         "```shell\n",
         "Add image from the slide deck\n",
         "```"
-      ],
-      "metadata": {
-        "id": "5qqNXxRKU1B8"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -58,31 +44,36 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# First things first, download the Gutenberg Project files\n",
-        "nltk.download('gutenberg')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "IVSjSzvxY4tM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# First things first, download the Gutenberg Project files\n",
+        "nltk.download('gutenberg')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "i5egExbqY6q4"
+      },
+      "outputs": [],
       "source": [
         "# get the text for hamlet\n",
         "hamlet_raw = gutenberg.open('shakespeare-hamlet.txt')\n",
         "hamlet_raw = hamlet_raw.readlines()"
-      ],
-      "metadata": {
-        "id": "i5egExbqY6q4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "g50oL62aY6l5"
+      },
+      "outputs": [],
       "source": [
         "# A utility function to perform basic cleanup\n",
         "def normalize_document(doc):\n",
@@ -97,98 +88,96 @@
         "    # re-create document from filtered tokens\n",
         "    doc = ' '.join(filtered_tokens)\n",
         "    return doc"
-      ],
-      "metadata": {
-        "id": "g50oL62aY6l5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "A4-Kmr0KZUAl"
+      },
+      "outputs": [],
       "source": [
         "normalize_corpus = np.vectorize(normalize_document)\n",
         "\n",
         "norm_corpus = normalize_corpus(hamlet_raw)\n",
         "norm_corpus"
-      ],
-      "metadata": {
-        "id": "A4-Kmr0KZUAl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Irxq6wRwZJc1"
+      },
       "source": [
         "## Bag of Words : Term Frequency\n",
         "A simple vector space representational model for text data. A vector space model is simply a mathematical model for transforming text as numeric vectors, such that each dimension of the vector is a specific feature\\attribute. The bag of words model represents each text document as a numeric vector where each dimension(column) is a specific word from the vocabulary and the value could be its frequency in the document. The model’s name is such because each document is represented literally as a ‘bag’ of its own words, disregarding word orders, sequences and grammar."
-      ],
-      "metadata": {
-        "id": "Irxq6wRwZJc1"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.feature_extraction.text import CountVectorizer"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Kn4N1UgpZLUz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6LktkOWdZNlq"
+      },
+      "outputs": [],
       "source": [
         "cv = CountVectorizer(min_df=0., max_df=1.)\n",
         "cv_matrix = cv.fit_transform(norm_corpus)\n",
         "cv_matrix = cv_matrix.toarray()\n",
         "cv_matrix"
-      ],
-      "metadata": {
-        "id": "6LktkOWdZNlq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "cv_matrix.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hPVvuidsZNjD"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "cv_matrix.shape"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vocab = cv.get_feature_names()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DZDQ8_zkZNgG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "vocab = cv.get_feature_names()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# show document feature vectors\n",
-        "pd.DataFrame(cv_matrix, columns=vocab)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Wd68S8B3Zbhw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# show document feature vectors\n",
+        "pd.DataFrame(cv_matrix, columns=vocab)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HbE9z4Moa8dy"
+      },
       "source": [
         "## TF-IDF\n",
         "Using absolute frequency counts as a measure of importance has its shortcomings. One potential issue is that there might be some terms which occur frequently across all documents and these may tend to overshadow other terms in the feature set. The TF-IDF model tries to combat this issue by using a normalizing factor. TF-IDF or Term Frequency-Inverse Document Frequency, uses a combination of two metrics in its computation, namely: __term frequency (tf)__ and __inverse document frequency (idf)__.\n",
@@ -201,60 +190,62 @@
         "\n",
         "The term **tf(w, D)** represents the term frequency of the word **w** in document **D**, which can be obtained from the Bag of Words model.\n",
         "The term idf(w, D) is the inverse document frequency for the term w, which can be computed as the log transform of the total number of documents in the corpus C divided by the document frequency of the word w, in other words it is the frequency of documents in the corpus where the word w occurs."
-      ],
-      "metadata": {
-        "id": "HbE9z4Moa8dy"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.feature_extraction.text import TfidfVectorizer"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "8rBwfbPubTv5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vs9uk2o8bZwh"
+      },
+      "outputs": [],
       "source": [
         "tv = TfidfVectorizer(min_df=0., max_df=1., use_idf=True)\n",
         "tv_matrix = tv.fit_transform(norm_corpus)\n",
         "tv_matrix = tv_matrix.toarray()\n",
         "tv_matrix.shape"
-      ],
-      "metadata": {
-        "id": "Vs9uk2o8bZwh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vocab = tv.get_feature_names()\n",
-        "pd.DataFrame(np.round(tv_matrix, 2), columns=vocab)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yFHSglOybZnX"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "vocab = tv.get_feature_names()\n",
+        "pd.DataFrame(np.round(tv_matrix, 2), columns=vocab)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6L2dbC3acLSt"
+      },
       "source": [
         "## Bag of N-Grams Model\n",
         "A word is just a single token, often known as a **unigram** or 1-gram. We already know that the Bag of Words model doesn’t consider order of words. But what if we also wanted to take into account phrases or collection of words which occur in a sequence? **N-grams** help us achieve that. An N-gram is basically a collection of word tokens from a text document such that these tokens are contiguous and occur in a sequence. Bi-grams indicate n-grams of order 2 (two words), Tri-grams indicate n-grams of order 3 (three words), and so on. The Bag of N-Grams model is hence just an extension of the Bag of Words model so we can also leverage N-gram based features. The following example depicts bi-gram based features in each document feature vector."
-      ],
-      "metadata": {
-        "id": "6L2dbC3acLSt"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UkAd3s4LcThI"
+      },
+      "outputs": [],
       "source": [
         "# you can set the n-gram range to 1,2 to get unigrams as well as bigrams\n",
         "bv = TfidfVectorizer(min_df=0., max_df=1., use_idf=True,ngram_range=(2,2))\n",
@@ -262,27 +253,25 @@
         "\n",
         "bv_matrix = bv_matrix.toarray()\n",
         "bv_matrix.shape"
-      ],
-      "metadata": {
-        "id": "UkAd3s4LcThI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vocab = bv.get_feature_names()\n",
-        "pd.DataFrame(bv_matrix, columns=vocab)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "gGGohxNycgrG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "vocab = bv.get_feature_names()\n",
+        "pd.DataFrame(bv_matrix, columns=vocab)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ikWNCAPHcqIU"
+      },
       "source": [
         "## Similarity Based Features\n",
         "Now that we have a method to transform text into vector form, we can now build on top of such features we engineered to generate new features which can be useful in domains like search engines, document clustering and information retrieval by leveraging these similarity based features.\n",
@@ -299,45 +288,58 @@
         "```shell\n",
         "Add image from the slide deck\n",
         "```"
-      ],
-      "metadata": {
-        "id": "ikWNCAPHcqIU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.metrics.pairwise import cosine_similarity"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "kmpC-Z0sdt_I"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics.pairwise import cosine_similarity"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "similarity_matrix = cosine_similarity(tv_matrix)\n",
-        "similarity_matrix"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "fMjIhdzhdt8D"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "similarity_matrix = cosine_similarity(tv_matrix)\n",
+        "similarity_matrix"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "similarity_df = pd.DataFrame(similarity_matrix)\n",
-        "similarity_df"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "i2qwGs6ndt37"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "similarity_df = pd.DataFrame(similarity_matrix)\n",
+        "similarity_df"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "02_text_representation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
