--- a/notebooks/03_text_classification.ipynb
+++ b/notebooks/03_text_classification.ipynb
@@ -1,26 +1,14 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "03_text_classification.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UqL0UBCHg7hg"
+      },
       "source": [
         "# Text Classification\n",
+        "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/raghavbali/workshop_text_classification/blob/main/notebooks/03_text_classification.ipynb)\n",
         "\n",
         "In this notebook, we will leverage the preprocessing and representation techniques and apply them for a text classification use-case. In this notebook, we will cover:\n",
         "\n",
@@ -38,19 +26,16 @@
         "- Fake Vs Actual News\n",
         "- Sentiment Classification and so on...\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "UqL0UBCHg7hg"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Install Dependencies"
-      ],
       "metadata": {
         "id": "gXJy38mdjZuT"
-      }
+      },
+      "source": [
+        "## Install Dependencies"
+      ]
     },
     {
       "cell_type": "code",
@@ -66,15 +51,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Import Libraries"
-      ],
       "metadata": {
         "id": "CHcgchhEjeET"
-      }
+      },
+      "source": [
+        "## Import Libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bHGTr-vljgko"
+      },
+      "outputs": [],
       "source": [
         "import nltk\n",
         "import contractions\n",
@@ -84,117 +74,117 @@
         "from tqdm.notebook import tqdm\n",
         "import unicodedata\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "bHGTr-vljgko"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "nltk.download('punkt')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "KYx0yihzjgh_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "nltk.download('punkt')"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kpdYVBNgjzLk"
+      },
       "source": [
         "## Get Data\n",
         "We will make use of the movie review dataset for this tutorial"
-      ],
-      "metadata": {
-        "id": "kpdYVBNgjzLk"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset = pd.read_csv(r'movie_reviews.csv.bz2')\n",
-        "dataset.info()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "g2QAXU-jjgfX"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset = pd.read_csv(r'movie_reviews.csv.bz2')\n",
+        "dataset.info()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Xqy9dJHWj-XT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset.head()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Prepare Train-Test Splits"
-      ],
       "metadata": {
         "id": "8Z0dHnjmkAbq"
-      }
+      },
+      "source": [
+        "### Prepare Train-Test Splits"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Wi4P8D5okE6b"
+      },
+      "outputs": [],
       "source": [
         "# build train and test datasets\n",
         "reviews = dataset['review'].values\n",
         "sentiments = dataset['sentiment'].values"
-      ],
-      "metadata": {
-        "id": "Wi4P8D5okE6b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_reviews = reviews[:35000]\n",
-        "train_sentiments = sentiments[:35000]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dNZgFhLvkE4S"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_reviews = reviews[:35000]\n",
+        "train_sentiments = sentiments[:35000]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "test_reviews = reviews[35000:]\n",
-        "test_sentiments = sentiments[35000:]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4rFcAlLYkE1G"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "test_reviews = reviews[35000:]\n",
+        "test_sentiments = sentiments[35000:]"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "StrRCsxjkNZW"
+      },
       "source": [
         "## Text Preprocessing\n",
         "- Remove HTML/Special Characters\n",
         "- Remove accented characters\n",
         "- Lowercase"
-      ],
-      "metadata": {
-        "id": "StrRCsxjkNZW"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vhv0p91EkTl8"
+      },
+      "outputs": [],
       "source": [
         "def strip_html_tags(text):\n",
         "  soup = BeautifulSoup(text, \"html.parser\")\n",
@@ -222,122 +212,122 @@
         "    norm_docs.append(doc)\n",
         "  \n",
         "  return norm_docs"
-      ],
-      "metadata": {
-        "id": "vhv0p91EkTl8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9ujpM3YrkiTb"
+      },
+      "outputs": [],
       "source": [
         "%%time\n",
         "norm_train_reviews = pre_process_corpus(train_reviews)\n",
         "norm_test_reviews = pre_process_corpus(test_reviews)"
-      ],
-      "metadata": {
-        "id": "9ujpM3YrkiTb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Feature Engineering"
-      ],
       "metadata": {
         "id": "utycIPiukpuq"
-      }
+      },
+      "source": [
+        "## Feature Engineering"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "KvHnLU18kszI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6BMIpQWTkt-Z"
+      },
+      "outputs": [],
       "source": [
         "# build BOW features on train reviews\n",
         "cv = CountVectorizer(binary=False, min_df=5, max_df=1.0, ngram_range=(1,2))\n",
         "cv_train_features = cv.fit_transform(norm_train_reviews)"
-      ],
-      "metadata": {
-        "id": "6BMIpQWTkt-Z"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0wpJkPeskt7y"
+      },
+      "outputs": [],
       "source": [
         "# build TFIDF features on train reviews\n",
         "tv = TfidfVectorizer(use_idf=True, min_df=5, max_df=1.0, ngram_range=(1,2),\n",
         "                     sublinear_tf=True)\n",
         "tv_train_features = tv.fit_transform(norm_train_reviews)"
-      ],
-      "metadata": {
-        "id": "0wpJkPeskt7y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KPVPu2OUkt4X"
+      },
+      "outputs": [],
       "source": [
         "%%time\n",
         "\n",
         "# transform test reviews into features\n",
         "cv_test_features = cv.transform(norm_test_reviews)\n",
         "tv_test_features = tv.transform(norm_test_reviews)"
-      ],
-      "metadata": {
-        "id": "KPVPu2OUkt4X"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5EiZUgr-k7EG"
+      },
       "source": [
         "## Classification Model: Logistic Regression\n",
         "\n",
         "Also known as the logit or logistic model, it uses the logistic (popularly also known as sigmoid) mathematical function to estimate the parameter values. These are the coefficients of all our features such that the overall loss is minimized when predicting the outcome"
-      ],
-      "metadata": {
-        "id": "5EiZUgr-k7EG"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Logistic Regression model on BOW features\n",
-        "from sklearn.linear_model import LogisticRegression"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "q5wmaYmelEh1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Logistic Regression model on BOW features\n",
+        "from sklearn.linear_model import LogisticRegression"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### LR with Count Vectorizer"
-      ],
       "metadata": {
         "id": "CgC2ZKRKlomp"
-      }
+      },
+      "source": [
+        "### LR with Count Vectorizer"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_ZBrjG8GlIvV"
+      },
+      "outputs": [],
       "source": [
         "# instantiate model\n",
         "lr_cv = LogisticRegression(penalty='l2', \n",
@@ -345,82 +335,82 @@
         "                        C=1, \n",
         "                        solver='lbfgs', \n",
         "                        random_state=42)"
-      ],
-      "metadata": {
-        "id": "_ZBrjG8GlIvV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IXujYFTKlIkp"
+      },
+      "outputs": [],
       "source": [
         "## Train with CountVectorizer Features\n",
         "# train model\n",
         "lr_cv.fit(cv_train_features, train_sentiments)"
-      ],
-      "metadata": {
-        "id": "IXujYFTKlIkp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# predict on test data\n",
-        "lr_bow_predictions = lr_cv.predict(cv_test_features)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Ioq62lEtlRPL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# predict on test data\n",
+        "lr_bow_predictions = lr_cv.predict(cv_test_features)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Evaluate Model"
-      ],
       "metadata": {
         "id": "wLu9mg4nlVkD"
-      }
+      },
+      "source": [
+        "### Evaluate Model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(classification_report(test_sentiments, lr_bow_predictions))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-rmXkrnRlYH1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(classification_report(test_sentiments, lr_bow_predictions))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RgWlqugblZrc"
+      },
+      "outputs": [],
       "source": [
         "labels = ['negative', 'positive']\n",
         "pd.DataFrame(confusion_matrix(test_sentiments, lr_bow_predictions), \n",
         "             index=labels, columns=labels)"
-      ],
-      "metadata": {
-        "id": "RgWlqugblZrc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### LR with TFIDF"
-      ],
       "metadata": {
         "id": "mi3_BaRMluBw"
-      }
+      },
+      "source": [
+        "### LR with TFIDF"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5DuaWtgalvlw"
+      },
+      "outputs": [],
       "source": [
         "# instantiate model\n",
         "lr_tv = LogisticRegression(penalty='l2', \n",
@@ -428,58 +418,70 @@
         "                        C=1, \n",
         "                        solver='lbfgs', \n",
         "                        random_state=42)"
-      ],
-      "metadata": {
-        "id": "5DuaWtgalvlw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tGTTCiIblyZA"
+      },
+      "outputs": [],
       "source": [
         "## Train with CountVectorizer Features\n",
         "# train model\n",
         "lr_tv.fit(tv_train_features, train_sentiments)"
-      ],
-      "metadata": {
-        "id": "tGTTCiIblyZA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Evaluate Model"
-      ],
       "metadata": {
         "id": "LAbEFoF0l7ye"
-      }
+      },
+      "source": [
+        "### Evaluate Model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(classification_report(test_sentiments, lr_tfidf_predictions))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qx1ER0fll-Zy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(classification_report(test_sentiments, lr_tfidf_predictions))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "T-yqZjmWl_Qn"
+      },
+      "outputs": [],
       "source": [
         "labels = ['negative', 'positive']\n",
         "pd.DataFrame(confusion_matrix(test_sentiments, lr_tfidf_predictions), \n",
         "             index=labels, columns=labels)"
-      ],
-      "metadata": {
-        "id": "T-yqZjmWl_Qn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "03_text_classification.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
