--- a/notebooks/04_nlp_deeplearning.ipynb
+++ b/notebooks/04_nlp_deeplearning.ipynb
@@ -8,6 +8,8 @@
       "source": [
         "# Word Embeddings and Deep Learning for NLP\n",
         "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/raghavbali/workshop_text_classification/blob/main/notebooks/04_nlp_deeplearning.ipynb)\n",
+        "\n",
         "This notebook covers some of basic steps involved in using Deep Learning for NLP. This notebook covers:\n",
         "\n",
         "A brief overview of Word2Vec based Embeddings.\n",
