Update with banner and library details

--- a/notebooks/01_getting_started.ipynb
+++ b/notebooks/01_getting_started.ipynb
@@ -17,9 +17,7 @@
         "- Understand the dataset using basic EDA\n",
         "- Learn how to perform basic preprocessing/cleanup to prepare the dataset\n",
         "\n",
-        "```shell\n",
-        "Add image from the slide deck\n",
-        "```"
+        "![nlp_workflow.png](../assets/nlp_workflow.png)"
       ]
     },
     {
@@ -33,16 +31,11 @@
         "If you have been working in the Data Science/ML domain, you must have a set of _goto_ libraries and tools to do your magic. For instance, libraries like ``sklearn`` , ``xgboost``, etc. are a must have. \n",
         "\n",
         "Similarly, the NLP domain has its set of favorites. The following are some of the popular ones:\n",
-        "- ``nltk``\n",
-        "- ``gensim``\n",
-        "- ``spacy`` \n",
-        "- ``fasttext``\n",
-        "- ``huggingface`` 🤗\n",
-        "\n",
-        "```shell\n",
-        "$> Add library logos\n",
-        "$> Add one liners for each \n",
-        "```"
+        "- ``nltk`` : is a leading platform for building NLP applications. It provides easy-to-use interfaces to over 50 corpora and lexical resources such as WordNet, along with a suite of text processing utilities.\n",
+        "- ``gensim`` : is a library for unsupervised topic modeling, document indexing, retrieval by similarity, and other NLP functionalities, using modern statistical machine learning.\n",
+        "- ``spacy`` : is a library which provides \"Industrial-Strength NLP\" capabilities which scale and are blazingly fast\n",
+        "- ``fasttext`` : is a library for learning of word embeddings and text classification created by Facebook's AI Research lab.\n",
+        "- ``huggingface`` 🤗 : is a community and data science platform that provides tools that enable users to build, train and deploy ML models based on open source (OS) code and technologies."
       ]
     },
     {
