--- a/notebooks/02_text_representation.ipynb
+++ b/notebooks/02_text_representation.ipynb
@@ -18,9 +18,7 @@
         "  - TF-IDF\n",
         "  - Similarity Features\n",
         "\n",
-        "```shell\n",
-        "Add image from the slide deck\n",
-        "```"
+        "![text_repr.png](../assets/text_repr.png)"
       ]
     },
     {
