Update notebook with question prompts and answer notebook

--- a/notebooks/answers/02_text_representation_answers.ipynb
+++ b/notebooks/answers/02_text_representation_answers.ipynb
@@ -74,7 +74,8 @@
       "outputs": [],
       "source": [
         "# stop words\n",
-        "# Add your code here"
+        "# Add your code here\n",
+        "stopwords = nltk.corpus.stopwords.words('english')"
       ]
     },
     {
@@ -89,9 +90,8 @@
         "def normalize_document(doc):\n",
         "    # lower case and remove special characters\\whitespaces\n",
         "    doc = re.sub(r'[^a-zA-Z\\s]', '', doc, re.I|re.A)\n",
-        "    \n",
         "    # Add your code here to lower case\n",
-        "\n",
+        "    doc = doc.lower()\n",
         "    doc = doc.strip()\n",
         "    # tokenize document\n",
         "    tokens = nltk.word_tokenize(doc)\n",
@@ -238,7 +238,7 @@
       "outputs": [],
       "source": [
         "# Add your code here to ger feature names\n",
-        "\n",
+        "vocab = tv.get_feature_names()\n",
         "pd.DataFrame(np.round(tv_matrix, 2), columns=vocab).head()"
       ]
     },
