Update classification notebook

--- a/notebooks/03_text_classification.ipynb
+++ b/notebooks/03_text_classification.ipynb
@@ -10,21 +10,26 @@
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/raghavbali/workshop_text_classification/blob/main/notebooks/03_text_classification.ipynb)\n",
         "\n",
+        "![sentiment.jpeg](../assets/sentiment.jpeg)\n",
+        "Photo by <a href=\"https://unsplash.com/@countchris?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Count Chris</a> on <a href=\"https://unsplash.com/s/photos/happy-emoji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Unsplash</a>\n",
+        "  \n",
+        "\n",
         "In this notebook, we will leverage the preprocessing and representation techniques and apply them for a text classification use-case. In this notebook, we will cover:\n",
         "\n",
         "- Apply cleanup and transform text data into a vector form\n",
         "- Work through a text classification use-case\n",
         "\n",
-        "```shell\n",
-        "Add image from the slide deck\n",
-        "```\n",
         "\n",
-        "Text classification can have a number of applications, such as:\n",
+        "### Text classification can have a number of applications, such as:\n",
         "- Document categorization\n",
         "- Spam vs Ham\n",
         "- Review Classification\n",
         "- Fake Vs Actual News\n",
         "- Sentiment Classification and so on...\n",
+        "\n",
+        "\n",
+        "Dataset for this hands-on :\n",
+        "- [IMDB Movie Review Dataset](https://huggingface.co/datasets/imdb)\n",
         "\n"
       ]
     },
@@ -309,7 +314,8 @@
       "outputs": [],
       "source": [
         "# Logistic Regression model on BOW features\n",
-        "from sklearn.linear_model import LogisticRegression"
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
       ]
     },
     {
@@ -431,6 +437,16 @@
         "## Train with CountVectorizer Features\n",
         "# train model\n",
         "lr_tv.fit(tv_train_features, train_sentiments)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# predict on test data\n",
+        "lr_tfidf_predictions = lr_tv.predict(tv_test_features)"
       ]
     },
     {
