Minor updates to 4th notebook

--- a/notebooks/04_nlp_deeplearning.ipynb
+++ b/notebooks/04_nlp_deeplearning.ipynb
@@ -103,8 +103,8 @@
       },
       "outputs": [],
       "source": [
-        "corpus = [news.split('\\n')[1] for news in twenty_corpus.data[:10]]\n",
-        "labels = [categories[i] for i in twenty_corpus.target[:10]]"
+        "corpus = [news.split('\\n')[1] for news in twenty_corpus.data]\n",
+        "labels = [categories[i] for i in twenty_corpus.target]"
       ]
     },
     {
@@ -313,6 +313,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "w2v_model.similar_by_word('tradition')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "w2v_model.doesnt_match(['tradition','medical','war'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "w2v_model.wv.most_similar(positive=[\"homeopathy\", \"medical\"], negative=[\"political\"], topn=3)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "EwgNs0sSp6Xk"
@@ -362,7 +389,7 @@
       },
       "outputs": [],
       "source": [
-        "classifier.tokenizer('The hugging-face transformer package really simplifies NLP tasks')"
+        "classifier.tokenizer('We are having some fun at 1729 while learning text classification')"
       ]
     },
     {
@@ -373,7 +400,7 @@
       },
       "outputs": [],
       "source": [
-        "classifier('The hugging-face transformer package really simplifies NLP tasks')"
+        "classifier('We are having some fun at 1729 while learning text classification')"
       ]
     }
   ],
